<resources>
    <string name="app_name">Mogal</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="greeting">Hello,</string>
    <string name="rating10">/10</string>
    <string name="said">said: </string>
    <string name="search_something">Search something</string>
    <string name="reviews">Reviews</string>
    <string name="movies">Movies</string>
    <string name="home">Home</string>
    <string name="contacts">Contacts</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string name="articles">Articles</string>
    <string name="settings">Settings</string>
    <string name="create_review">Create Review</string>
    <string name="create_article">Create Article</string>
    <string name="create_article_name_placeholder">Name of the article</string>
    <string name="create_article_body_placeholder">Your body text goes here…</string>
    <string name="appearance">Appearance</string>
    <string name="account">Account</string>
    <string name="theme">Theme</string>
    <string name="theme_description">Change the theme of the application</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_description">Sign into your account</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_description">Create a new account</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_description">Sign out of your account</string>
    <string name="nickname">Nickname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="load_nearby_articles">Load Nearby Articles</string>
    <string name="article_picture_url">Picture URL</string>
</resources>