<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/activity_sign_in_header"
        android:background="?attr/colorTab"
        android:padding="12dp">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/clear_icon"
            android:tint="?attr/colorText"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:id="@+id/activity_sign_in_close_button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_sign_in_header"
        app:layout_constraintVertical_bias="0.2"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="32sp"
            android:textColor="?attr/colorText"
            android:textStyle="bold"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_marginTop="28dp"
           android:padding="16dp">

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/activity_sign_in_email_layout"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/email"
               app:startIconDrawable="@drawable/email_icon"
               app:endIconMode="clear_text"
               android:layout_marginBottom="24dp"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/activity_sign_in_email"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:inputType="textEmailAddress"/>
           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/activity_sign_in_password_layout"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/password"
               app:startIconDrawable="@drawable/lock_icon"
               app:endIconMode="password_toggle"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/activity_sign_in_password"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:inputType="textPassword"/>
           </com.google.android.material.textfield.TextInputLayout>

           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/activity_sign_in_submit_button"
               style="@style/Widget.MaterialComponents.Button.TextButton"
               android:text="@string/submit"
               android:layout_gravity="end"
               android:layout_marginTop="32dp"
               android:layout_marginEnd="8dp"
               android:enabled="false"/>
       </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>