<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground"
    tools:context=".CreateArticle">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorTab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/activity_create_article_header">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="16dp"
            app:layout_scrollFlags="scroll|enterAlways|snap">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/activity_create_article_erase_button"
                android:tint="?attr/colorText"
                android:src="@drawable/clear_icon"
                android:background="?attr/selectableItemBackgroundBorderless"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/activity_create_article_header_title"
                android:text="@string/create_article"
                android:textSize="21sp"
                android:textStyle="bold"
                android:layout_marginStart="12dp"
                android:textColor="?attr/colorText"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/attachment_icon"
                    android:tint="?attr/colorText"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:id="@+id/activity_create_article_attachment_button"
                    android:layout_marginEnd="12dp"/>
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/send_icon"
                    android:tint="?attr/colorText"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:id="@+id/activity_create_article_upload_button"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:textSize="16sp"
        android:id="@+id/activity_create_article_name_edit_text"
        android:hint="@string/create_article_name_placeholder"
        android:textColorHint="@color/colorPlaceholder"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_create_article_header"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@null"
        android:textSize="16sp"
        android:id="@+id/activity_create_article_body_edit_text"
        android:hint="@string/create_article_body_placeholder"
        android:textColorHint="@color/colorPlaceholder"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="16dp"
        android:gravity="top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_create_article_name_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>